--- a/complete/src/main/resources/static/css/creative.css
+++ b/complete/src/main/resources/static/css/creative.css
@@ -28,6 +28,7 @@
     padding-top: 8px;
 }
 
+@media (min-width:576px)
 #conversation{
-    border-left: 1px solid black;
+    border-left: 1px solid gray;
 }
