--- a/complete/src/main/resources/static/css/creative.css
+++ b/complete/src/main/resources/static/css/creative.css
@@ -28,7 +28,110 @@
     padding-top: 8px;
 }
 
+.list-conv{ 
+	overflow-y:scroll;
+}
+
 @media (min-width:576px)
 #conversation{
     border-left: 1px solid gray;
 }
+
+.new_conv {
+	background: #f5f3f3;
+	float: left;
+	padding: 15px;
+	width: 100%;
+	text-align:center;
+}
+
+.list_conv {
+	height: 420px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	clear: left;
+ }
+  
+.list_conv .contact_sec {
+	margin-top: 3px;
+}
+
+.list_conv ul {
+	border: 1px solid #dddddd;
+}
+
+.list_conv li {
+	border-bottom: 1px solid #dddddd;
+	padding: 6px;
+}
+
+.list_conv li:last-child {
+	border-bottom:none;
+}
+
+.list_conv li:hover {
+	background: #428bca none repeat scroll 0 0;
+	color: #fff;
+	cursor:pointer;
+}
+
+.list_conv.chat-body {
+	margin-left: 47px;
+	margin-top: 0;
+}
+   
+.search_contact{
+	background: #f5f3f3;
+	float: left;
+	padding: 15px;
+	width: 100%;
+}
+  
+.chat_area {
+	float: left;
+	height: 300px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	width: 100%;
+}
+
+.chat_area li {
+    padding: 14px 14px 0;
+}
+
+.chat_area li:last-child {
+    padding-bottom: 10px;
+}
+
+.chat_area .chat-body1 {
+    margin-left: 50px;
+}
+
+.chat_area .admin_chat .chat-body1 {
+  	margin-left: 0;
+  	margin-right: 50px;
+}
+
+.chat-body1 p {
+    background: #fbf9fa none repeat scroll 0 0;
+    padding: 10px;
+}
+
+.message_write {
+	background: #f5f3f3 none repeat scroll 0 0;
+	float: left;
+	padding: 15px;
+	width: 100%;
+}
+
+.message_write textarea.form-control {
+	height: 70px;
+	padding: 10px;
+}
+
+.chat_bottom {
+	float: left;
+	margin-top: 13px;
+	width: 100%;
+}
+
