WebSocket added to the app. Added elements : 1) WebSocketConfig class 2) a function on MessageController.java 3) a few functions (connect(); disconnect(); sendMessage(); showMessage()) on myjs.js file

--- a/complete/src/main/resources/static/css/creative.css
+++ b/complete/src/main/resources/static/css/creative.css
@@ -127,6 +127,7 @@ body{
 .chat-body1 p {
     background: #fbf9fa none repeat scroll 0 0;
     padding: 10px;
+    white-space:pre;
 }
 
 .message_write {
