--- a/complete/src/main/resources/static/css/creative.css
+++ b/complete/src/main/resources/static/css/creative.css
@@ -169,3 +169,8 @@ body{
     -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
     animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
+
+.errorForm{
+	color:red;
+	font-style: italic;
+}
